--- a/menu.html
+++ b/menu.html
@@ -460,7 +460,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-cerveza">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/cervezagallo.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Cerveza</a><span>Q. 20.00</span>
             </div>
@@ -470,7 +470,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-cerveza">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/cervezaheineken.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Cerveza Extranjera</a><span>Q. 28.00</span>
             </div>
@@ -480,7 +480,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-cerveza">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/cervezagallo.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Cubetazo (6)</a><span>Q. 100.00</span>
             </div>
@@ -490,7 +490,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-cerveza">
-            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <img src="assets/img/menu/cervezaheineken.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Cubetazo (6) Extranjera</a><span>Q. 120.00</span>
             </div>
@@ -904,11 +904,11 @@
       <h3>The Best Of Bobby</h3>
       <p>Las mejores cosas de la vida no caen del cielo... Muchas estan en The Best Of Bobby.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
+        <a href="https://www.facebook.com/The-Best-Of-Bobby-Guate-102559745416170" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/thebobgt/?hl=es" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+        <!--<a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span> The Best Of Bobby </span></strong>. All Rights Reserved
