--- a/index.html
+++ b/index.html
@@ -1062,8 +1062,8 @@
       <p>Las mejores cosas de la vida no caen del cielo... Muchas estan en The Best Of Bobby.</p>
       <div class="social-links">
         <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.facebook.com/The-Best-Of-Bobby-Guate-102559745416170" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/thebobgt/?hl=es" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
         <!--<a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
       </div>
